--- a/theme/assets/css/sections/header.css
+++ b/theme/assets/css/sections/header.css
@@ -265,7 +265,6 @@
 
 /* mini cart */
 #mini-cart {
-    height: auto;
     background: none;
     box-shadow: none;
 }
@@ -280,14 +279,13 @@
     box-shadow: 0px 4px 32px 0px var(--theme-tooltip-shadow-color), 0px 8px 16px 0px var(--theme-tooltip-shadow-color);
 }
 
-#mini-cart:not([data-show]) .mini-cart {
-    opacity: 0;
-    transition: opacity 0.2s;
-}
-
 /* Adding a custom animation to the mini-cart */
 #mini-cart[data-show] .mini-cart:not(.is-interacting):not(.is-loading) {
     animation: scale-in-tr 0.5s;
+}
+
+#mini-cart:not([data-show]) .mini-cart:not(.is-interacting):not(.is-loading) {
+    animation: scale-down-tr 0.5s;
 }
 
 .mini-cart .row {
